[DSC-2812] fix to use java 17